raw/NAILUL MURODZ MUHAMMAD 6400 245150201111033/2024-11-14-08-22-43.ceg/compilation.txt
NT.java:67: error: cannot find symbol
        Calculator calc = new Calculator();
        ^
  symbol:   class Calculator
  location: class NT
NT.java:67: error: cannot find symbol
        Calculator calc = new Calculator();
                              ^
  symbol:   class Calculator
  location: class NT
2 errors
Not compiled
